# rag

./: chat_1.ipynb  pyproject.toml  rag.ipynb  requirements.txt
.qdrant/data/: raft_state.json
.qdrant/data/collections/rag-pembelajaran/0/: newest_clocks.json  replica_state.json
.qdrant/data/collections/rag-pembelajaran/0/segments/4cdcb9e4-e901-42ec-b147-a60dce3470ff/payload_index/: IDENTITY  LOG  MANIFEST-000005
.qdrant/data/collections/rag-pembelajaran/0/segments/51d7beed-c4ab-40ab-b881-fd4bb8013f91/payload_index/: IDENTITY  LOG  MANIFEST-000005
.qdrant/data/collections/rag-pembelajaran/0/segments/634cde6f-1e87-4138-be48-b5b3ba3700ee/: mutable_id_tracker.mappings
.qdrant/data/collections/rag-pembelajaran/0/segments/634cde6f-1e87-4138-be48-b5b3ba3700ee/payload_index/: IDENTITY  LOG  MANIFEST-000005
.qdrant/data/collections/rag-pembelajaran/0/segments/eba1f890-4697-46c5-8e11-a6348849bfe8/payload_index/: IDENTITY  LOG  MANIFEST-000005
basic/: indexing.ipynb  multiquery.ipynb
data/vectorstore/faiss_index/: index.faiss  index.pkl
docs/: behaviorism_learning.txt  constructivism_learning.txt  effective_learning_practices.txt  technology_based_learning.txt
rag_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rag_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
vectorstore/faiss_index/: index.faiss  index.pkl
