[project]
name = "rag-service"
version = "0.1.0"
description = "RAG API with LangChain, OpenAI, and ChromaDB"
authors = [
  { name = "Misbahul Muttaqin", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
  "langchain-openai>=0.1.8",
  "python-dotenv>=1.0.1",
  "langchain>=0.2.1",
  "langchain-community>=0.2.1",
  "langchain-anthropic>=0.1.15",
  "langchain-google-genai>=1.0.5",
  "langchain-google-firestore>=0.3.0",
  "firestore>=0.0.8",
  "chromadb>=0.5.0",
  "bs4>=0.0.2",
  "firecrawl-py>=0.0.13",
  "langchainhub>=0.1.18",
  "wikipedia>=1.4.0",
  "qdrant-client>=1.7.0",
  "dotenv>=0.9.9",
  "langchain-groq>=0.3.8",
  "langchain-core>=0.3.76",
  "faiss-cpu>=1.12.0",
  "huggingface-hub>=0.34.4",
]

[build-system]
requires = ["uv", "setuptools"]
build-backend = "setuptools.build_meta"
