[project]
name = "rag-service"
version = "0.1.0"
description = "RAG API with LangChain, OpenAI, and ChromaDB"
authors = [
  { name = "Misbahul Muttaqin", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
  "python-dotenv>=1.0.1",
  "langchain>=0.2.1",
  "langchain-community>=0.2.1",
  "chromadb>=0.5.0",
  "bs4>=0.0.2",
  "langchainhub>=0.1.18",
  "wikipedia>=1.4.0",
  "langchain-groq>=0.3.8",
  "langchain-core>=0.3.76",
]

[build-system]
requires = ["uv", "setuptools"]
build-backend = "setuptools.build_meta"
