[project]
name = "rag-service"
version = "0.1.0"
description = "RAG API with LangChain, OpenAI, and ChromaDB"
authors = [
  { name = "Misbahul Muttaqin", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
  "python-dotenv>=1.0.1",
  "langchain>=0.2.1",
  "langchain-community>=0.2.1",
  "chromadb>=0.5.0",
  "bs4>=0.0.2",
  "langchainhub>=0.1.18",
  "wikipedia>=1.4.0",
  "langchain-groq>=0.3.8",
  "langchain-core>=0.3.76",
  "ipykernel>=6.30.1",
  "langchain-huggingface>=0.3.1",
  "torch>=2.8.0",
  "sentence-transformers>=5.1.1",
  "transformers>=4.57.0",
  "tqdm>=4.67.1",
  "pandas>=2.3.3",
  "accelerate>=1.10.1",
]

[build-system]
requires = ["uv", "setuptools"]
build-backend = "setuptools.build_meta"
